# Project30.1

./: README.md  pyproject.toml  requirements.txt
college/: models.py  serliazers.py  urls.py  views.py
config/: settings.py  urls.py
django_filters/: apps.py
users/: models.py  serliazers.py  urls.py  views.py
